[workspace]
members = ["daemon"]
default-members = [".", "daemon"]

[package]
name = "swww"
version = "0.8.1-master"
authors = ["Leonardo Gibrowski Faé <leonardo.fae44@gmail.com>"]
edition = "2021"
# we use `std::cell::OnceLock` which was stabilized in 1.70
rust-version = "1.70"

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.bench]
lto = "thin"
debug = 1
strip = false

[dependencies]
clap = { version = "4.4", features = ["derive", "wrap_help", "env"] }
fast_image_resize = "2.7"
image = "0.24"
rand = "0.8"
utils = { path = "utils" }

[dev-dependencies]
assert_cmd = "2.0"

[build-dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"
