[workspace]
members = ["daemon"]
default-members = [".", "daemon"]

[package]
name = "swww"
version = "0.9.5"
authors = ["Leonardo Gibrowski Faé <leonardo.fae44@gmail.com>"]
edition = "2021"
rust-version = "1.74"

# Enable some optimizations in debug mode. Otherwise, it is a pain to test it
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.bench]
lto = "thin"
debug = 1
strip = false

[dependencies]
image = "0.25"
fast_image_resize = "3.0"
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }
rand = "0.8"
utils = { version = "0.9.5", path = "utils" }

[dev-dependencies]
assert_cmd = "2.0"

[build-dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
