[workspace]
resolver = "3"
members = ["client", "daemon", "common", "tests"]
default-members = ["client", "daemon"]

[workspace.package]
version = "0.11.2-master"
authors = ["Leonardo Gibrowski Faé <leonardo.fae44@gmail.com>"]
edition = "2024"
license-file = "LICENSE"
rust-version = "1.89.0"

[workspace.dependencies]
common = { path = "common" }

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
#pedantic = { level = "warn", priority = -1 }

module-name-repetitions = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"

# Enable some optimizations in debug mode. Otherwise, it is a pain to test it
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.bench]
lto = "thin"
debug = 1
strip = false
