[package]
name = "swww"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = [
  # all formats, except avif, since avif compiles just rav1d, which is just an
  # encoder, which we do not care about
  "bmp",
  "dds",
  "exr",
  "ff",
  "gif",
  "hdr",
  "ico",
  "jpeg",
  "png",
  "pnm",
  "qoi",
  "tga",
  "tiff",
  "webp",
] }
fast_image_resize = "5.1"
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }
fastrand = { version = "2.3", default-features = false, features = ["std"] }
common = { workspace = true }

[build-dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
