[package]
name = "common"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
rustix = { version = "1.0", default-features = false, features = [
  "std",
  "net",
  "shm",
  "mm",
  "param",
  "process",
] }

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
fastrand = { version = "2.3", default-features = false, features = ["std"] }
