[package]
name = "common"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
log    = { version = "0.4", default-features = false, features = [] }
rustix = { version = "1.1", default-features = false, features = [
  "std",
  "alloc",
  "net",
  "shm",
  "mm",
  "param",
  "process",
  "thread",
  "time",
] }

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
fastrand = { version = "2.3", default-features = false, features = ["std"] }
