[package]
name = "swww-daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
common = { workspace = true }

waybackend = { version = "0.3" }
log = { version = "0.4", default-features = false, features = [
  "max_level_debug",
  "release_max_level_info",
  "std",
] }
rustix = { version = "1.0", default-features = false, features = ["event"] }
libc = "0.2"
keyframe = "1.1"
sd-notify = { version = "0.4" }

[build-dependencies]
waybackend-scanner = { version = "0.3", features = ["build-script"] }
