[package]
name = "swww-daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
common = { workspace = true }

waybackend = { version = "0.6" }
log = { version = "0.4", default-features = false, features = [
  "max_level_trace",
  "release_max_level_info",
  "std",
] }
rustix = { version = "1.1", default-features = false, features = ["event"] }
libc = "0.2"
keyframe = "1.1"
sd-notify = { version = "0.4" }

[build-dependencies]
waybackend-scanner = { version = "0.6", features = ["build-script"] }
