[package]
name = "swww-daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
common = { workspace = true }
log    = { version = "0.4", default-features = false, features = [
  "max_level_trace",
  "release_max_level_info",
  "std",
] }

waybackend = { version = "0.7" }
rustix     = { version = "1.1", default-features = false, features = ["event"] }
libc       = { version = "0.2" }
keyframe   = { version = "1.1" }
sd-notify  = { version = "0.4" }

[build-dependencies]
waybackend-scanner = { version = "0.7", features = ["build-script"] }
