[package]
name = "utils"
version = "0.9.5-master"
authors = ["Leonardo Gibrowski Faé <leonardo.fae44@gmail.com>"]
edition = "2021"
license-file = "../LICENSE"

[dependencies]
rustix = { version = "0.38", default-features = false, features = [ "net", "shm", "mm", "param" ] }

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "compression"
harness = false
