[package]
name = "utils"
version = "0.9.5-masterV2"
authors = ["Leonardo Gibrowski Faé <leonardo.fae44@gmail.com>"]
edition = "2021"
license-file = "../LICENSE"

[dependencies]
rustix = { version = "0.38", default-features = false, features = [ "std", "net", "shm", "mm", "param", "process" ] }

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
fastrand = { version = "2.1", default-features = false, features = [ "std" ] }
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "compression"
harness = false
