[package]
name = "utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
rustix = { version = "0.38", default-features = false, features = [
  "std",
  "net",
  "shm",
  "mm",
  "param",
] }

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
fastrand = { version = "2.1", default-features = false, features = ["std"] }
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "compression"
harness = false
